--- a/dnscrypt-proxy.toml
+++ b/dnscrypt-proxy.toml
@@ -36,7 +36,7 @@ server_names = ['cloudflare', 'quad9-dnscrypt-ip4-nofilter-pri', 'quad9-dnscrypt
 ## Example with both IPv4 and IPv6:
 ## listen_addresses = ['127.0.0.1:53', '[::1]:53']
 
-#listen_addresses = ['0.0.0.0:53']
+listen_addresses = ['0.0.0.0:53']
 
 ## Maximum number of simultaneous client connections to accept
 
