testing dnscrypt user

--- a/dnscrypt-proxy.toml
+++ b/dnscrypt-proxy.toml
@@ -34,9 +34,9 @@ server_names = ['cloudflare', 'quad9-dnscrypt-ip4-nofilter-pri', 'quad9-dnscrypt
 
 ## List of local addresses and ports to listen to. Can be IPv4 and/or IPv6.
 ## Example with both IPv4 and IPv6:
-## listen_addresses = ['127.0.0.1:53', '[::1]:53']
+## listen_addresses = ['127.0.0.1:53', '[::1]:5053']
 
-listen_addresses = ['0.0.0.0:53']
+listen_addresses = ['0.0.0.0:5053']
 
 
 ## Maximum number of simultaneous client connections to accept
@@ -49,7 +49,7 @@ max_clients = 250
 ## Note (2): this feature is not compatible with systemd socket activation.
 ## Note (3): when using -pidfile, the PID file directory must be writable by the new user
 
-# user_name = 'nobody'
+# user_name = 'dnscrypt'
 
 
 ## Require servers (from static + remote sources) to satisfy specific properties
