--- a/.drone.yml
+++ b/.drone.yml
@@ -21,12 +21,12 @@ steps:
     password:
       from_secret: docker_password
 
-trigger:
-  event:
-  - promote
-  target:
-  - 2.0.45
-  - production
+# trigger:
+  # event:
+  # - promote
+  # target:
+  # - 2.0.45
+  # - production
 
 # ---
 
