--- a/.drone.yml
+++ b/.drone.yml
@@ -11,12 +11,13 @@ steps:
   image: thegeeklab/drone-docker-buildx
   privileged: true
   purge: true
+    cache_from: "modem7/dnscrypt-proxy:latest"
   settings:
     repo: modem7/dnscrypt-proxy
     tags: 
       - latest 
       - 2.0.45
-    platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7,linux/arm/v8
+    platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
     username:
       from_secret: docker_username
     password:
