--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ steps:
     tags: 
       - latest 
       - 2.0.45
-    platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+    platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
     purge: true
     cache_from: "modem7/dnscrypt-proxy:latest"
     username:
