--- a/.drone.yml
+++ b/.drone.yml
@@ -38,12 +38,12 @@ steps:
     # status:
     # - success
 
-trigger:
-  event:
-  - promote
-  target:
-  - 2.0.45
-  - production
+# trigger:
+  # event:
+  # - promote
+  # target:
+  # - 2.0.45
+  # - production
 
 # ---
 
