--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,14 @@ platform:
   arch: amd64
 
 steps:
+
+- name: Lint Dockerfile
+  image: hadolint/hadolint:latest-debian
+  pull: if-not-exists
+  commands:
+    - hadolint --version
+    - hadolint Dockerfile
+
 - name: deploy  
   image: thegeeklab/drone-docker-buildx
   privileged: true
@@ -19,6 +27,7 @@ steps:
     purge: true
     dry_run: true #disable when not testing
     compress: true
+    use_cache: true
     cache_from: "modem7/dnscrypt-proxy:latest"
     username:
       from_secret: docker_username
