--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,7 @@ steps:
     purge: true
     dry_run: true #disable when not testing
     compress: true
+    use_cache: true
     cache_from: "modem7/dnscrypt-proxy:latest"
     username:
       from_secret: docker_username
