--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,17 @@
+---
+kind: pipeline
+type: docker
+name: lint
+steps:
+  - name: Lint Dockerfile
+    image: hadolint/hadolint:latest-debian
+    pull: if-not-exists
+    commands:
+      - hadolint --version
+      - hadolint Dockerfile*
+
+---
+
 kind: pipeline
 type: docker
 name: deploy
@@ -7,32 +21,27 @@ platform:
   arch: amd64
 
 steps:
+  - name: deploy
+    image: thegeeklab/drone-docker-buildx
+    privileged: true
+    settings:
+      repo: modem7/dnscrypt-proxy
+      tags:
+        - latest
+        - 2.0.45
+      platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+      purge: true
+      dry_run: true  # disable when not testing
+      compress: true
+      use_cache: true
+      cache_from: "modem7/dnscrypt-proxy:latest"
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
 
-- name: Lint Dockerfile
-  image: hadolint/hadolint:latest-debian
-  pull: if-not-exists
-  commands:
-    - hadolint --version
-    - hadolint Dockerfile
-
-- name: deploy  
-  image: thegeeklab/drone-docker-buildx
-  privileged: true
-  settings:
-    repo: modem7/dnscrypt-proxy
-    tags: 
-      - latest 
-      - 2.0.45
-    platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
-    purge: true
-    dry_run: true #disable when not testing
-    compress: true
-    use_cache: true
-    cache_from: "modem7/dnscrypt-proxy:latest"
-    username:
-      from_secret: docker_username
-    password:
-      from_secret: docker_password
+depends_on:
+  - lint
 
 # - name: pushrm-dockerhub
   # image: chko/docker-pushrm:1
