--- a/.drone.yml
+++ b/.drone.yml
@@ -2,13 +2,13 @@
 kind: pipeline
 type: docker
 name: lint
-
 steps:
-- name: Lint Dockerfile
-  image: hadolint/hadolint:latest-debian
-  commands:
-    - hadolint --version
-    - hadolint Dockerfile*
+  - name: Lint Dockerfile
+    image: hadolint/hadolint:latest-debian
+    pull: if-not-exists
+    commands:
+      - hadolint --version
+      - hadolint Dockerfile*
 
 ---
 
