--- a/.drone.yml
+++ b/.drone.yml
@@ -19,25 +19,26 @@ name: deploy
 platform:
   os: linux
   arch: amd64
- 
-- name: deploy  
-  image: thegeeklab/drone-docker-buildx
-  privileged: true
-  settings:
-    repo: modem7/dnscrypt-proxy
-    tags: 
-      - latest 
-      - 2.0.45
-    platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
-    purge: true
-    dry_run: true #disable when not testing
-    compress: true
-    use_cache: true
-    cache_from: "modem7/dnscrypt-proxy:latest"
-    username:
-      from_secret: docker_username
-    password:
-      from_secret: docker_password
+
+steps:
+  - name: deploy
+    image: thegeeklab/drone-docker-buildx
+    privileged: true
+    settings:
+      repo: modem7/dnscrypt-proxy
+      tags:
+        - latest
+        - 2.0.45
+      platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+      purge: true
+      dry_run: true  # disable when not testing
+      compress: true
+      use_cache: true
+      cache_from: "modem7/dnscrypt-proxy:latest"
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
 
 depends_on:
   - lint
