--- a/dc-pwd.yml
+++ b/dc-pwd.yml
@@ -1,9 +1,10 @@
-version: "2.4"
+version: '3'
 
  ############
  ##DNSCrypt##
  ############
  
+services:
  #DNSCrypt-Proxy - Non-caching, Non-logging, DNSSEC DNS Resolver
   dnscrypt-proxy:
     # image: modem7/dnscrypt-proxy:2.0.45
