--- a/.drone.yml
+++ b/.drone.yml
@@ -40,9 +40,6 @@ steps:
       password:
         from_secret: docker_password
 
-depends_on:
-  - lint
-
 # Doesn't work currently - https://github.com/christian-korneck/docker-pushrm/blob/master/README.md#limitations
 
 # - name: pushrm-dockerhub
@@ -58,6 +55,17 @@ depends_on:
   # when:
     # status:
     # - success
+
+- name: slack
+  image: plugins/slack
+  settings:
+    webhook:
+      from_secret: slack_hook
+  when:
+    status: [ success, failure ]
+
+depends_on:
+  - lint
 
 trigger:
   event:
