--- a/.drone.yml
+++ b/.drone.yml
@@ -71,9 +71,9 @@ steps:
 depends_on:
   - lint
 
-trigger:
-  event:
-  - promote
-  target:
-  - 2.0.45
-  - production
+# trigger:
+  # event:
+  # - promote
+  # target:
+  # - 2.0.45
+  # - production
