--- a/.drone.yml
+++ b/.drone.yml
@@ -31,7 +31,8 @@ steps:
     compress: true
     use_cache: true
     cache_from: "modem7/dnscrypt-proxy:latest"
-  platforms: # if it doesn't work run docker run --privileged --rm tonistiigi/binfmt --install all
+# if it doesn't work run docker run --privileged --rm tonistiigi/binfmt --install all
+  platforms:
     - linux/amd64
     - linux/arm/v6
     - linux/arm/v7
@@ -43,6 +44,14 @@ steps:
     tags:
       - latest
       - 2.0.45
+
+- name: slack
+  image: plugins/slack
+  settings:
+    webhook:
+      from_secret: slack_hook
+  when:
+    status: [ success, failure ]
 
 # Doesn't work currently - https://github.com/christian-korneck/docker-pushrm/blob/master/README.md#limitations
 
@@ -60,20 +69,12 @@ steps:
     # status:
     # - success
 
-- name: slack
-  image: plugins/slack
-  settings:
-    webhook:
-      from_secret: slack_hook
-  when:
-    status: [ success, failure ]
-
-depends_on:
-  - lint
-
 # trigger:
   # event:
   # - promote
   # target:
   # - 2.0.45
   # - production
+
+depends_on:
+  - lint
