--- a/.drone.yml
+++ b/.drone.yml
@@ -21,28 +21,24 @@ platform:
   arch: amd64
 
 steps:
-  - name: latest
+  - name: deploy
     image: thegeeklab/drone-docker-buildx
     privileged: true
     settings:
       repo: modem7/dnscrypt-proxy
-      dry_run: true  # disable when not testing
+      tags:
+        - latest
+        - 2.0.45
+      platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
       purge: true
+      dry_run: true  # disable when not testing
       compress: true
       use_cache: true
       cache_from: "modem7/dnscrypt-proxy:latest"
-      platforms:  # if it doesn't work run docker run --privileged --rm tonistiigi/binfmt --install all
-        - linux/amd64
-        - linux/arm/v6
-        - linux/arm/v7
-        - linux/arm64/v8
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
-      tags:
-        - latest
-        - 2.0.45
 
 - name: slack
   image: plugins/slack
