--- a/.drone.yml
+++ b/.drone.yml
@@ -26,22 +26,33 @@ steps:
     privileged: true
     settings:
       repo: modem7/dnscrypt-proxy
-      tags:
-        - latest
-        - 2.0.45
-      platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
-      purge: true
       dry_run: true  # disable when not testing
+      purge: true
       compress: true
       use_cache: true
       cache_from: "modem7/dnscrypt-proxy:latest"
+      platforms:  # if it doesn't work run docker run --privileged --rm tonistiigi/binfmt --install all
+        - linux/amd64
+        - linux/arm/v6
+        - linux/arm/v7
+        - linux/arm64/v8
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
+      tags:
+        - latest
+        - 2.0.45
 
-depends_on:
-  - lint
+- name: slack
+  image: plugins/slack
+  settings:
+    webhook:
+      from_secret: slack_hook
+  when:
+    status: [ success, failure ]
+
+# Doesn't work currently - https://github.com/christian-korneck/docker-pushrm/blob/master/README.md#limitations
 
 # - name: pushrm-dockerhub
   # image: chko/docker-pushrm:1
@@ -64,22 +75,5 @@ depends_on:
   # - 2.0.45
   # - production
 
-# ---
-
-#Doesn't work currently - https://github.com/christian-korneck/docker-pushrm/blob/master/README.md#limitations
-
-# kind: pipeline
-# type: docker
-# name: readme
-
-# steps:
-# - name: readme
-  # image: chko/docker-pushrm
-  # environment:
-    # DOCKER_PASS:
-      # from_secret: docker_password
-    # DOCKER_USER:
-      # from_secret: docker_username
-    # INPUT_FILE: README.md
-    # PUSHRM_TARGET: modem7/test
-    # SHORT_DESCRIPTION: "DNSCrypt"
+depends_on:
+  - lint
