--- a/.drone.yml
+++ b/.drone.yml
@@ -40,6 +40,14 @@ steps:
       password:
         from_secret: docker_password
 
+- name: slack
+  image: plugins/slack
+  settings:
+    webhook:
+      from_secret: slack_hook
+  when:
+    status: [ success, failure ]
+
 depends_on:
   - lint
 
