--- a/.drone.yml
+++ b/.drone.yml
@@ -26,12 +26,16 @@ steps:
     privileged: true
     settings:
       repo: modem7/dnscrypt-proxy
-      platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
-      purge: true
       dry_run: true  # disable when not testing
+      purge: true
       compress: true
       use_cache: true
       cache_from: "modem7/dnscrypt-proxy:latest"
+      platforms:  # if it doesn't work run docker run --privileged --rm tonistiigi/binfmt --install all
+        - linux/amd64
+        - linux/arm/v6
+        - linux/arm/v7
+        - linux/arm64/v8
       username:
         from_secret: docker_username
       password:
@@ -48,8 +52,7 @@ steps:
     when:
       status: [ success, failure ]
 
-depends_on:
-  - lint
+# Doesn't work currently - https://github.com/christian-korneck/docker-pushrm/blob/master/README.md#limitations
 
 # - name: pushrm-dockerhub
   # image: chko/docker-pushrm:1
@@ -71,3 +74,6 @@ depends_on:
   # target:
   # - 2.0.45
   # - production
+
+depends_on:
+  - lint
