--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,23 @@ steps:
 
 kind: pipeline
 type: docker
+name: testing
+
+steps:
+  - name: Testing
+    image: tonistiigi/binfmt
+    privileged: true
+    # group: test
+    commands:
+      - install all
+
+depends_on:
+  - lint
+
+---
+
+kind: pipeline
+type: docker
 name: deploy
 
 platform:
@@ -68,12 +85,12 @@ steps:
     # status:
     # - success
 
-# trigger:
-  # event:
-  # - promote
-  # target:
-  # - 2.0.45
-  # - production
+trigger:
+  event:
+    - promote
+  target:
+    - 2.0.45
+    - production
 
 depends_on:
   - lint
