--- a/.drone.yml
+++ b/.drone.yml
@@ -73,6 +73,7 @@ steps:
       repo: modem7/dnscrypt-proxy
       # dry_run: true  # disable when not testing
       purge: true
+      squash: true
       compress: true
       use_cache: true
       cache_from: "modem7/dnscrypt-proxy:latest"
