--- a/dnscrypt-proxy.toml
+++ b/dnscrypt-proxy.toml
@@ -356,8 +356,7 @@ reject_ttl = 10
 
 ## Enable a DNS cache to reduce latency and outgoing traffic
 
-# cache = false
-cache = true
+cache = false
 
 ## Cache size
 
