--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,8 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+
+  - package-ecosystem: "docker" # See documentation for possible values
+    directory: "/2.0.45" # Location of package manifests
+    schedule:
+      interval: "daily"
