--- a/.github/workflows/update_dockerfiles.yml
+++ b/.github/workflows/update_dockerfiles.yml
@@ -16,3 +16,4 @@ jobs:
         uses: ludeeus/dockerfile-updater@main
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          exclude_package: dnscrypt-proxy=2.0.45-r2
