--- a/2.0.45/Dockerfile
+++ b/2.0.45/Dockerfile
@@ -1,16 +1,14 @@
 FROM alpine:3.14
 
-ENV DNSCRYPT_VERSION 2.0.45-r2
-
 LABEL maintainer="Alex Lane"
 LABEL description="A flexible DNS proxy, with support for modern encrypted DNS protocols \
                    such as DNSCrypt v2 and DNS-over-HTTP/2." \
-                   url="https://github.com/jedisct1/dnscrypt-proxy" \
-                   version={$DNSCRYPT_VERSION}
+                   url="https://github.com/jedisct1/dnscrypt-proxy"
+
 ENV LOCAL_PORT 53
 RUN apk update && \
     apk add --no-cache \ 
-    dnscrypt-proxy=$DNSCRYPT_VERSION \
+    dnscrypt-proxy=2.0.45-r2 \
     drill && \
     rm -rf /var/cache/apk/* && rm -rf /tmp/*
 
